2020-12-25  6.9.11-54  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-54 GIT revision 16...

2020-12-25  6.9.11-54  <quetzlzacatenango@image...>
    * enable reading of a certain grayscale TIFF image.

2020-12-24  6.9.11-53  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-53 GIT revision 16203:1449d6ede:20201224

2020-12-20  6.9.11-53  <quetzlzacatenango@image...>
  * CSS colors no longer require commas.
  * eliminate possible arthimetic overflow (reference
    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=28849)

2020-12-19  6.9.11-52  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-52 GIT revision 16185:710d7811d:20201219

2020-12-19  6.9.11-52  <quetzlzacatenango@image...>
  * return alpha bytes with stream utility (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2862).
  * percentage -border in x no longer adds one pixel border in y (reference
    https://github.com/ImageMagick/ImageMagick/issues/2978).

2020-12-18  6.9.11-51  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-51 GIT revision 16180:7d116a3bb:20201218

2020-12-17  6.9.11-51  <quetzlzacatenango@image...>
  * reduce time to identify PDF/PS/XPS/PCL image width/height (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2993).

2020-12-16  6.9.11-50  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-50 GIT revision 16174:7cd364a33:20201216

2020-12-15  6.9.11-50  <quetzlzacatenango@image...>
  * revert patch to ready gray alpha TIFF image.

2020-12-14  6.9.11-49  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-49 GIT revision 16165:749185e00:20201214

2020-12-13  6.9.11-49  <quetzlzacatenango@image...>
  * correct previous patch to read planar RGB TIFF images.

2020-12-10  6.9.11-48  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-48 GIT revision 16156:573d57764:20201210
